--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content%}
-    <h1>Registra una cuenta nueva</h1>
+    <h1 class="top-space bottom-space left-space">Registra una cuenta nueva</h1>
     <div class="container">
         {{ wtf.quick_form(signup_form) }}
     </div>
