--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -19,26 +19,30 @@ Flask Platzi | Bienvenido-->
 {% block content %}
 
     {% if username %}
-        <h1>Bienvenido/a, {{ username | capitalize }}</h1>
+        <h1 class="left-space top-space bottom-space">Bienvenido/a, {{ username | capitalize }}</h1>
         <!--Se usa capitaliza para poner filtro, en este caso mayúscula la 1era letra-->
     {% endif %}
     <!--  corchetes con % representa una estructura de control -->
-    {% if user_ip %}
-    <h1>Hello World Platzi, tu IP es {{ user_ip }}</h1>
-    {% else %}
-    <a href="{{ url_for('index') }}">Ir al inicio</a> <!--Función que sirve para entrar una ruta solo mandando su nombre-->
-    {% endif %} <!--Todas las estructuras de control deben tener un fin-->
-
-    <div class="container">
-        <h2>Crea una nueva tarea</h2>
-        {{ wtf.quick_form(todo_form)}}
+    
+    <div class="container bottom-space">
+        <div class="row">
+            <div class="col-sm-10">
+                {{ wtf.quick_form(todo_form)}}
+            </div>
+            <div class="col">
+                {{ wtf.quick_form(submit_button)}}
+            </div>
+        </div>
     </div>
     <!-- ciclo For -->
-    <ul class="list-group">
+    <h2 class="left-space">Tasks</h2>
+    <ul class="list-group-horizontal-sm">
         {% for todo in todos %}
-            {{macros.render_todo(todo, delete_form, update_form)}}
+            <li class="list-group-item">
+                {{macros.render_todo(todo, delete_form, update_form)}}
+            </li>
         {% endfor %}
-      </ul>
+    </ul>
 
 
 
