--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,37 +1,20 @@
-<!--<nav>-->
-    <!--<ul>-->
-        <!--<img src="{{ url_for('static', filename='images/platzi.png')}}" alt="Platzi Logo">-->
-        <!--<li><a href="{{ url_for('index') }}">Ir a inicio</a></li>-->
-        <!--<li><a href="https://platzi.com" target="_blank">Ir a Platzi</a></li>-->
-    <!--</ul>-->
-<!--</nav>-->
-
 <div class="navbar navbar-inverse" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button"
-                    class="navbar-toggle"
-                    data-toggle="collapse"
-                    data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+    <div class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{ url_for('index') }}">
                 <img src="{{ url_for('static', filename='images/platzi.png') }}"
                      style="max-width: 48px"
                      alt="Platzi logo">
             </a>
-        </div>
 
-        <div class="navbar-collapse collapse">
+        <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+                <li class="nav-item"><a href="{{ url_for('index') }}">Inicio</a></li>
+                {% if not current_user.is_authenticated %}
+                    <li class="nav-item"><a href="{{ url_for('auth.signup') }}">Signup</a></li>
                 {% endif %}
-                <li><a href="{{ url_for('index') }}">Inicio</a></li>
-                <li><a href="https://platzi.com" target="_blank">Platzi</a></li>
+                {% if current_user.is_authenticated %}
+                    <li class="nav-item"><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
